crates/apollo-compiler/test_data/diagnostics/0074_merge_identical_fields.txt
Error: operation must not select different types using the same field name `name`
    ╭─[0074_merge_identical_fields.graphql:19:3]
    │
 18 │   name: nickname
    │   ───────┬──────  
    │          ╰──────── `name` has type `String` here
 19 │   name
    │   ──┬─  
    │     ╰─── but the same field name has type `String!` here
────╯
Error: operation must not select different types using the same field name `name`
    ╭─[0074_merge_identical_fields.graphql:19:3]
    │
 18 │   name: nickname
    │   ───────┬──────  
    │          ╰──────── `name` has type `String` here
 19 │   name
    │   ──┬─  
    │     ╰─── but the same field name has type `String!` here
────╯
Error: operation must not select different types using the same field name `fido`
    ╭─[0074_merge_identical_fields.graphql:24:3]
    │
 23 │   fido: name
    │   ─────┬────  
    │        ╰────── `fido` has type `String!` here
 24 │   fido: nickname
    │   ───────┬──────  
    │          ╰──────── but the same field name has type `String` here
────╯
Error: operation must not select different types using the same field name `fido`
    ╭─[0074_merge_identical_fields.graphql:24:3]
    │
 23 │   fido: name
    │   ─────┬────  
    │        ╰────── `fido` has type `String!` here
 24 │   fido: nickname
    │   ───────┬──────  
    │          ╰──────── but the same field name has type `String` here
────╯

